--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height"/>
   </head>
   <body style="background:#111111">
-    <div id="rotateScreen">Move to &#128187; or 	&#10227;</div>
+    <div id="rotateScreen">Rotate. </br> Or &#128187;.</div>
     <h1>Scrabble Score</h1>
     <div id="container">
       <div id="score"></div>
