--- a/source/index.html
+++ b/source/index.html
@@ -7,15 +7,16 @@
   <body style="background:#111111">
     <div id="rotateScreen">Rotate. </br> Or &#128187;.</div>
     <h1>Scrabble Score</h1>
+    <div id="source"><a target="_blank" href="https://github.com/codetheweb/scrabblescore/">Source</a></div>
     <div id="container">
       <div id="score"></div>
-      <textarea id="invisibleInput" autofocus></textarea>
+      <textarea id="invisibleInput" autofocus autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
       <div id="text"><span id="message">start typing...</span></div>
       <div id="multipliers">
-        <button id="M2x">Double Score</button>
-        <button id="M3x">Triple Score</button>
+        <button id="M2x">Double Word Score</button>
+        <button id="M3x">Triple Word Score</button>
       </div>
-      <div id="sponser-message">Made with <span class="heart">&hearts;</span>, burritos, and science by <a href="https://maxisom.me">Max Isom</a></div>
+      <div id="sponser-message">Made with <span class="heart">&hearts;</span>, burritos, and science by <a target="_blank" href="https://maxisom.me">Max Isom</a></div>
     </div>
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400%7COswald" rel="stylesheet">
