Lazy load fonts and texture

--- a/source/index.html
+++ b/source/index.html
@@ -18,8 +18,7 @@
       </div>
       <div id="sponser-message">Made with <span class="heart">&hearts;</span>, burritos, and science by <a target="_blank" href="https://maxisom.me">Max Isom</a></div>
     </div>
-    <link rel="stylesheet" href="main.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400%7COswald" rel="stylesheet">
-    <script src="main.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="main.css" media="none" onload="this.media='all';">
+    <script src="main.js" charset="utf-8" async="true"></script>
   </body>
 </html>
